@@ -4,7 +4,7 @@
  * @license		GNU General Public License version 2 or later; see LICENSE.txt
  */
 
- html, body { margin: 0 !important; padding: 0 !important; font: 10px Tahoma, Verdana, sans-serif; }
+ html, body { margin: 0 !important; padding: 0 !important; font: 10px Tahoma, Verdana, sans-serif !important; }
 
 .item { float: left; border: 1px solid #ccc; margin: 3px;	 position: relative; }
 
